Add personal work/education information

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -87,10 +87,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 
 		<Section title='About'>
 			<p class='text-muted-foreground'>
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis atque quia omnis
-				consectetur, voluptas praesentium veniam blanditiis ratione asperiores accusantium laborum
-				odit commodi quis deserunt incidunt et dolor iure ut! Lorem ipsum dolor sit, amet
-				consectetur adipisicing elit. Alias quia, doloribus ut beatae perspiciatis voluptatibus.
+				Hello, My name is Umesh Ganapathy aka Umesh and I am a Software Enginner and Technopreneur.  and Indie Hacker.
 			</p>
 		</Section>
 		{
@@ -107,58 +104,96 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 			)
 		}
 
-		<Section title='Experience'>
+		<Section title='Work Experience'>
 			<Card
-				heading='Lorem Ipsum'
-				subheading='Sit amet consectetur'
-				date='Dec 2022 - Nov 2023'
+				heading='CollabWrite'
+				subheading='Founder and CEO'
+				date='Jan 2020 - Present'
+				imagePath='/src/assets/about-astro.png'
+				altText='Umesh Ganapathy, Founder and CEO, CollabWrite'
+				imageClass='h-12 w-auto md:-left-16'
+			>
+				<ul class='ml-4 list-disc text-muted-foreground'>
+					<li>
+						Collabwrite is a dynamic growth partner agency specializing in propelling tech startups and small to medium-sized businesses towards success. 
+
+						<li>As a dedicated ally in the competitive technology landscape, Collabwrite offers tailored strategies designed to solve customer and growth challenges through data-driven approaches.</li>
+					</li>
+				</ul>
+			</Card>
+			<Card
+					heading='XSEED Education'
+					subheading='Senior Technical Product Manager'
+					date='Dec 2018 - July 2019'
+					imagePath='/src/assets/about-astro.png'
+					altText='Umesh Ganapathy, Senior Technical Product Manager, XSEED Education'
+					imageClass='h-12 w-auto md:-left-16'
+				>
+					<ul class='ml-4 list-disc text-muted-foreground'>
+						<li>
+							Collabwrite is a dynamic growth partner agency specializing in propelling tech startups and small to medium-sized businesses towards success. 
+
+							<li>As a dedicated ally in the competitive technology landscape, Collabwrite offers tailored strategies designed to solve customer and growth challenges through data-driven approaches.</li>
+						</li>
+					</ul>
+				</Card>
+			<Card
+					heading='ReportBee'
+					subheading='Product Chief, Technology, Founding Team Member'
+					date='Jan 2012 - Dec 2018'
+					imagePath='/src/assets/about-astro.png'
+					altText='Lorem, ipsum dolor sit'
+					imageClass='h-12 w-auto md:-left-16'
+				>
+					<ul class='ml-4 list-disc text-muted-foreground'>
+						<li>
+							Collabwrite is a dynamic growth partner agency specializing in propelling tech startups and small to medium-sized businesses towards success. 
+
+							<li>As a dedicated ally in the competitive technology landscape, Collabwrite offers tailored strategies designed to solve customer and growth challenges through data-driven approaches.</li>
+						</li>
+					</ul>
+				</Card>
+				<Card
+				heading='HeyMath!'
+				subheading='Software Engineer'
+				date='Jan 2020 - Present'
 				imagePath='/src/assets/about-astro.png'
 				altText='Lorem, ipsum dolor sit'
 				imageClass='h-12 w-auto md:-left-16'
 			>
 				<ul class='ml-4 list-disc text-muted-foreground'>
 					<li>
-						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore debitis recusandae, ut
-						molestiae laboriosam pariatur!
+						Collabwrite is a dynamic growth partner agency specializing in propelling tech startups and small to medium-sized businesses towards success. 
 
-						<li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, pariatur!</li>
+						<li>As a dedicated ally in the competitive technology landscape, Collabwrite offers tailored strategies designed to solve customer and growth challenges through data-driven approaches.</li>
 					</li>
 				</ul>
 			</Card>
-			<Card
-				heading='Lorem Ipsum'
-				subheading='Sit amet consectetur'
-				date='Dec 2022 - Nov 2023'
-				imagePath='/src/assets/about-astro.png'
-				altText='Lorem, ipsum dolor sit'
-				imageClass='h-12 w-auto md:-left-16'
-			/>
 		</Section>
 
 		<Section title='Education'>
 			<Card
-				heading='Lorem Ipsum'
-				subheading='Sit amet consectetur'
-				date='Dec 2022 - Nov 2023'
+				heading='Bachelors in Computer Science and Engineering'
+				subheading='Calicut University, Kerala'
+				date='June 2004 - April 2007'
 				imagePath='/src/assets/about-astro.png'
-				altText='Lorem, ipsum dolor sit'
+				altText='Bachelors in Computer Science and Engineering'
 				imageClass='h-12 w-auto md:-left-16'
-			>
-				<ul class='ml-4 list-disc text-muted-foreground'>
-					<li>
-						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore debitis recusandae, ut
-						molestiae laboriosam pariatur!
-
-						<li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, pariatur!</li>
-					</li>
-				</ul>
-			</Card>
+			/>
 			<Card
-				heading='Lorem Ipsum'
-				subheading='Sit amet consectetur'
-				date='Dec 2022 - Nov 2023'
+				heading='Diploma in Electronics'
+				subheading='Department of Technical Education, Kerala'
+				date='June 2001 - April 2004'
 				imagePath='/src/assets/about-astro.png'
-				altText='Lorem, ipsum dolor sit'
+				altText='Bachelors in Computer Science and Engineering'
+				imageClass='h-12 w-auto md:-left-16'
+			/>
+			<Card
+				heading='Technical Highschool'
+				subheading='Junior Technical Highschool, Kerala'
+				date='June 1998 - April 2001'
+				imagePath='/src/assets/about-astro.png'
+				altText='Junior Technical Highschool, Kerala'
 				imageClass='h-12 w-auto md:-left-16'
 			/>
 		</Section>
