--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import SkillLayout from '../components/SkillLayout.astro'
 import PostPreview from '@/components/blog/PostPreview.astro'
 
 import { Image } from 'astro:assets'
-import astro from '../assets/about-astro.png'
+import astro from '../assets/about-umesh.png'
 
 import { getAllPosts, sortMDByDate } from '@/utils'
 
@@ -33,9 +33,13 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 			/>
 
 			<div class='flex flex-col items-center gap-y-4'>
-				<h1 class='text-3xl font-bold'>Lorem ipsum dolor</h1>
+				<h1 class='text-4xl font-black'>hi, I'm Umesh</h1>
+				<h2 class='text-center text-xl'>
+					Software Engineer turned Entrepreneur. I love building things and helping people.<br /> Very
+					active on Xwitter.
+				</h2>
 				<a
-					href='https://github.com/srleom/astro-theme-resume.git'
+					href='https://calendly.com/umesh-ganapathy/30min'
 					class='flex flex-row items-center gap-x-3 rounded-3xl border border-input px-4 py-2 text-sm shadow-sm transition-all hover:shadow-md'
 				>
 					<span class='relative flex items-center justify-center'>
@@ -45,29 +49,30 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 						<span class='relative inline-flex h-2 w-2 rounded-full bg-green-400'></span>
 					</span>
 
-					<p class='font-medium'>Get free template</p>
+					<p class='font-medium'>Schedule a call</p>
 				</a>
 				<div class='flex flex-wrap justify-center gap-x-7 gap-y-3'>
-					<Label title='Lorem Ipsum'>
-						<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' class='h-5 w-5' slot='icon'
+					<Label
+						title='Connect on Linkedin'
+						as='a'
+						href='https://www.linkedin.com/in/umeshganapathy/'
+						target='_blank'
+					>
+						<svg
+							xmlns='http://www.w3.org/2000/svg'
+							viewBox='0 0 16 16'
+							slot='icon'
+							class='h-5 w-5 text-foreground/75'
 							><path
 								fill='currentColor'
-								d='M4.615 20q-.69 0-1.152-.462Q3 19.075 3 18.385v-9.77q0-.69.463-1.152Q3.925 7 4.615 7H9V5.615q0-.69.463-1.152Q9.925 4 10.615 4h2.77q.69 0 1.153.463q.462.462.462 1.152V7h4.385q.69 0 1.152.463q.463.462.463 1.152v9.77q0 .69-.462 1.152q-.463.463-1.153.463zm0-1h14.77q.23 0 .423-.192q.192-.193.192-.423v-9.77q0-.23-.192-.423Q19.615 8 19.385 8H4.615q-.23 0-.423.192Q4 8.385 4 8.615v9.77q0 .23.192.423q.193.192.423.192M10 7h4V5.615q0-.23-.192-.423Q13.615 5 13.385 5h-2.77q-.23 0-.423.192q-.192.193-.192.423zM4 19V8z'
-							></path></svg
-						>
-					</Label>
-					<Label title='Ipsum'>
-						<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' class='h-5 w-5' slot='icon'
-							><path
-								fill='currentColor'
-								d='M12.003 11.73q.668 0 1.14-.475q.472-.475.472-1.143t-.475-1.14q-.476-.472-1.143-.472t-1.14.476q-.472.475-.472 1.143t.475 1.14q.476.472 1.143.472M12 19.677q2.82-2.454 4.458-4.991q1.638-2.538 1.638-4.39q0-2.744-1.737-4.53T12 3.981q-2.621 0-4.359 1.785t-1.737 4.53q0 1.852 1.638 4.39q1.639 2.537 4.458 4.99m0 1.343q-3.525-3.117-5.31-5.814q-1.786-2.697-1.786-4.909q0-3.173 2.066-5.234Q9.037 3 12 3t5.03 2.062q2.066 2.061 2.066 5.234q0 2.212-1.785 4.909q-1.786 2.697-5.311 5.814m0-10.904'
+								d='M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248c-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586c.173-.431.568-.878 1.232-.878c.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252c-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z'
 							></path></svg
 						>
 					</Label>
 					<Label
-						title='Connect on Linkedin'
+						title='Connect on X'
 						as='a'
-						href='https://www.linkedin.com/in/example/'
+						href='https://www.x.com/umeshganapathy/'
 						target='_blank'
 					>
 						<svg
@@ -87,7 +92,19 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 
 		<Section title='About'>
 			<p class='text-muted-foreground'>
-				Hello, My name is Umesh Ganapathy aka Umesh and I am a Software Enginner and Technopreneur.  and Indie Hacker.
+				At the end of 2019, I quit my full time job as a senior technical product manager to
+				dedicate more time and energy to my family.
+			</p>
+			<p class='text-muted-foreground'>
+				Starting in 2020, I explored my passion for building and solving challenges through side
+				hustles and helping businesses build and scale through consulting.
+			</p>
+			<p class='text-muted-foreground'>
+				In 2021, I moved to the US to support my wife's research and became family of 4.
+			</p>
+			<p class='text-muted-foreground'>
+				In the past, I pursued a bachelors in computer science and engineering, have been involved
+				in building couple of ed tech startups and tech communities in South India.
 			</p>
 		</Section>
 		{
@@ -109,63 +126,86 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 				heading='CollabWrite'
 				subheading='Founder and CEO'
 				date='Jan 2020 - Present'
-				imagePath='/src/assets/about-astro.png'
+				imagePath='/src/assets/about-umesh.png'
 				altText='Umesh Ganapathy, Founder and CEO, CollabWrite'
 				imageClass='h-12 w-auto md:-left-16'
 			>
 				<ul class='ml-4 list-disc text-muted-foreground'>
 					<li>
-						Collabwrite is a dynamic growth partner agency specializing in propelling tech startups and small to medium-sized businesses towards success. 
+						Collabwrite is a dynamic growth partner agency specializing in propelling tech startups
+						and small to medium-sized businesses towards success.
 
-						<li>As a dedicated ally in the competitive technology landscape, Collabwrite offers tailored strategies designed to solve customer and growth challenges through data-driven approaches.</li>
+						<li>
+							As a dedicated ally in the competitive technology landscape, Collabwrite offers
+							tailored strategies designed to solve customer and growth challenges through
+							data-driven approaches.
+						</li>
 					</li>
 				</ul>
 			</Card>
 			<Card
-					heading='XSEED Education'
-					subheading='Senior Technical Product Manager'
-					date='Dec 2018 - July 2019'
-					imagePath='/src/assets/about-astro.png'
-					altText='Umesh Ganapathy, Senior Technical Product Manager, XSEED Education'
-					imageClass='h-12 w-auto md:-left-16'
-				>
-					<ul class='ml-4 list-disc text-muted-foreground'>
-						<li>
-							Collabwrite is a dynamic growth partner agency specializing in propelling tech startups and small to medium-sized businesses towards success. 
-
-							<li>As a dedicated ally in the competitive technology landscape, Collabwrite offers tailored strategies designed to solve customer and growth challenges through data-driven approaches.</li>
-						</li>
-					</ul>
-				</Card>
-			<Card
-					heading='ReportBee'
-					subheading='Product Chief, Technology, Founding Team Member'
-					date='Jan 2012 - Dec 2018'
-					imagePath='/src/assets/about-astro.png'
-					altText='Lorem, ipsum dolor sit'
-					imageClass='h-12 w-auto md:-left-16'
-				>
-					<ul class='ml-4 list-disc text-muted-foreground'>
-						<li>
-							Collabwrite is a dynamic growth partner agency specializing in propelling tech startups and small to medium-sized businesses towards success. 
-
-							<li>As a dedicated ally in the competitive technology landscape, Collabwrite offers tailored strategies designed to solve customer and growth challenges through data-driven approaches.</li>
-						</li>
-					</ul>
-				</Card>
-				<Card
-				heading='HeyMath!'
-				subheading='Software Engineer'
-				date='Jan 2020 - Present'
-				imagePath='/src/assets/about-astro.png'
-				altText='Lorem, ipsum dolor sit'
-				imageClass='h-12 w-auto md:-left-16'
+				heading='XSEED Education'
+				subheading='Senior Technical Product Manager'
+				date='Dec 2018 - July 2019'
+				imagePath='/src/assets/xseed.png'
+				altText='Umesh Ganapathy, Senior Technical Product Manager, XSEED Education'
+				imageClass='h-8 w-auto md:-left-20'
+				href='https://www.xseededucation.com'
 			>
 				<ul class='ml-4 list-disc text-muted-foreground'>
 					<li>
-						Collabwrite is a dynamic growth partner agency specializing in propelling tech startups and small to medium-sized businesses towards success. 
+						Collabwrite is a dynamic growth partner agency specializing in propelling tech startups
+						and small to medium-sized businesses towards success.
 
-						<li>As a dedicated ally in the competitive technology landscape, Collabwrite offers tailored strategies designed to solve customer and growth challenges through data-driven approaches.</li>
+						<li>
+							As a dedicated ally in the competitive technology landscape, Collabwrite offers
+							tailored strategies designed to solve customer and growth challenges through
+							data-driven approaches.
+						</li>
+					</li>
+				</ul>
+			</Card>
+			<Card
+				heading='ReportBee'
+				subheading='Product Chief, Technology, Founding Team Member'
+				date='Jan 2012 - Dec 2018'
+				imagePath='/src/assets/reportbee.jpg'
+				altText='Umesh, Product Chief - Technology, Founding Team Member, ReportBee'
+				imageClass='h-10 w-auto md:-left-20'
+				href='https://www.reportbee.com'
+			>
+				<ul class='ml-4 list-disc text-muted-foreground'>
+					<li>
+						Collabwrite is a dynamic growth partner agency specializing in propelling tech startups
+						and small to medium-sized businesses towards success.
+
+						<li>
+							As a dedicated ally in the competitive technology landscape, Collabwrite offers
+							tailored strategies designed to solve customer and growth challenges through
+							data-driven approaches.
+						</li>
+					</li>
+				</ul>
+			</Card>
+			<Card
+				heading='HeyMath!'
+				subheading='Software Engineer -> Senior Software Engineer'
+				date='Jul 2007 - Dec 2011'
+				imagePath='/src/assets/heymath.png'
+				altText='Umesh, Software Engineer, HeyMath'
+				imageClass='h-12 w-auto md:-left-20'
+				href='https://www.heymath.com'
+			>
+				<ul class='ml-4 list-disc text-muted-foreground'>
+					<li>
+						Collabwrite is a dynamic growth partner agency specializing in propelling tech startups
+						and small to medium-sized businesses towards success.
+
+						<li>
+							As a dedicated ally in the competitive technology landscape, Collabwrite offers
+							tailored strategies designed to solve customer and growth challenges through
+							data-driven approaches.
+						</li>
 					</li>
 				</ul>
 			</Card>
@@ -176,26 +216,34 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 				heading='Bachelors in Computer Science and Engineering'
 				subheading='Calicut University, Kerala'
 				date='June 2004 - April 2007'
-				imagePath='/src/assets/about-astro.png'
-				altText='Bachelors in Computer Science and Engineering'
+				imagePath='/src/assets/cu.png'
+				altText='Umesh, Bachelors in Computer Science and Engineering, Calicut University'
 				imageClass='h-12 w-auto md:-left-16'
-			/>
+				href='https://uoc.ac.in/'
+				>Learned about fundamentals of computers, algorithms, data structures and software
+				development</Card
+			>
 			<Card
 				heading='Diploma in Electronics'
 				subheading='Department of Technical Education, Kerala'
 				date='June 2001 - April 2004'
-				imagePath='/src/assets/about-astro.png'
-				altText='Bachelors in Computer Science and Engineering'
+				imagePath='/src/assets/mti.jpeg'
+				altText='Umesh, Diploma in Electronics, MTI, Department of Technical Education, Kerala'
 				imageClass='h-12 w-auto md:-left-16'
-			/>
+				href='http://mtithrissur.ac.in/'
+				>Learned about fundamentals of electronic components, how they work and how to desicn
+				electronic circuits</Card
+			>
 			<Card
 				heading='Technical Highschool'
 				subheading='Junior Technical Highschool, Kerala'
 				date='June 1998 - April 2001'
-				imagePath='/src/assets/about-astro.png'
-				altText='Junior Technical Highschool, Kerala'
-				imageClass='h-12 w-auto md:-left-16'
-			/>
+				imagePath='/src/assets/dte.jpeg'
+				altText='Umesh, Junior Technical Highschool, Kerala'
+				imageClass='h-12 w-auto md:-left-20'
+				href='https://www.dtekerala.gov.in/institutiondetail/3/'
+				>Learned some life skills like carpentery, mechanical, electrical, welding etc</Card
+			>
 		</Section>
 
 		<Section title='Projects'>
@@ -219,25 +267,25 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 			</div>
 		</Section>
 
-		<Section title='Certifications'>
+		<Section title='Volunteer'>
 			<Card
 				as='a'
-				heading='Lorem ipsum, dolor sit amet consectetur adipisicing.'
+				heading='Founder & Manager, HTML5 User Group Chennai'
 				subheading='Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam dicta magni consequuntur corrupti.'
 				date='Mar 2024 - Mar 2024'
-				imagePath='/src/assets/about-astro.png'
+				imagePath='/src/assets/html5.png'
 				altText='Lorem, ipsum dolor sit'
-				imageClass='h-11 w-auto md:-left-16'
+				imageClass='h-11 w-auto md:-left-32'
 				href='https://www.google.com'
 			/>
 			<Card
 				as='a'
-				heading='Lorem ipsum, dolor sit amet'
+				heading='Campus Connect Chair, Society for Rich Internet Applications and Rich User Interface'
 				subheading='Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam dicta.'
 				date='Mar 2029 - Mar 2032'
-				imagePath='/src/assets/about-astro.png'
+				imagePath='/src/assets/riarui.jpeg'
 				altText='Lorem, ipsum dolor sit'
-				imageClass='h-11 w-auto md:-left-16'
+				imageClass='h-14 w-auto md:-left-16'
 				href='https://www.google.com'
 			/>
 		</Section>
