--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -17,7 +17,7 @@
           class='inline-flex gap-x-2 text-gray-600 hover:text-gray-800 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600'
           href='/privacy'>Privacy</a
         > -->
-				<p class=''>© 2024 lorem. All rights reserved.</p>
+				<p class=''>© 2024 Umesh Ganapathy. All rights reserved.</p>
 			</div>
 
 			<div class='flex items-center justify-between'>
@@ -26,7 +26,7 @@
 					<!-- Linkedin -->
 					<a
 						class='inline-block text-muted-foreground transition-all hover:text-muted-foreground/75'
-						href='https://www.linkedin.com/in/example/'
+						href='https://www.linkedin.com/in/umeshganapathy/'
 					>
 						<svg
 							class='h-4 w-4 flex-shrink-0'
@@ -39,6 +39,24 @@
 								d='M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248c-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586c.173-.431.568-.878 1.232-.878c.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252c-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z'
 							></path></svg
 						>
+					</a>
+					<!-- X -->
+					<a
+						class='inline-block text-muted-foreground transition-all hover:text-muted-foreground/75'
+						href='https://www.x.com/umeshganapathy/'
+					>
+						<svg
+							width='1em'
+							height='1em'
+							viewBox='0 0 300 300'
+							version='1.1'
+							xmlns='http://www.w3.org/2000/svg'
+						>
+							<path
+								fill='currentColor'
+								d='M178.57 127.15 290.27 0h-26.46l-97.03 110.38L89.34 0H0l117.13 166.93L0 300.25h26.46l102.4-116.59 81.8 116.59h89.34M36.01 19.54H76.66l187.13 262.13h-40.66'
+							></path>
+						</svg>
 					</a>
 				</div>
 				<!-- End Social Brands -->
