--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -70,21 +70,24 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 						>
 					</Label>
 					<Label
-						title='Connect on X'
+						title='Connect on Twitter'
 						as='a'
 						href='https://www.x.com/umeshganapathy/'
 						target='_blank'
 					>
 						<svg
-							xmlns='http://www.w3.org/2000/svg'
-							viewBox='0 0 16 16'
+							width='1em'
 							slot='icon'
-							class='h-5 w-5 text-foreground/75'
-							><path
-								fill='currentColor'
-								d='M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248c-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586c.173-.431.568-.878 1.232-.878c.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252c-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z'
-							></path></svg
+							height='1em'
+							viewBox='0 0 300 300'
+							version='1.1'
+							xmlns='http://www.w3.org/2000/svg'
 						>
+							<path
+								fill='currentColor'
+								d='M178.57 127.15 290.27 0h-26.46l-97.03 110.38L89.34 0H0l117.13 166.93L0 300.25h26.46l102.4-116.59 81.8 116.59h89.34M36.01 19.54H76.66l187.13 262.13h-40.66'
+							></path>
+						</svg>
 					</Label>
 				</div>
 			</div>
@@ -231,8 +234,8 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 				altText='Umesh, Diploma in Electronics, MTI, Department of Technical Education, Kerala'
 				imageClass='h-12 w-auto md:-left-16'
 				href='http://mtithrissur.ac.in/'
-				>Learned about fundamentals of electronic components, how they work and how to desicn
-				electronic circuits</Card
+				>Learned about fundamentals of electronic components, how they work and how to design
+				electronic instruments</Card
 			>
 			<Card
 				heading='Technical Highschool'
@@ -298,7 +301,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 		</Section>
 	</div>
 	<a
-		href='https://github.com/srleom/astro-theme-resume.git'
+		href='https://calendly.com/umesh-ganapathy/30min'
 		class='mt-16 flex flex-row items-center gap-x-3 rounded-3xl border border-input px-4 py-2 text-sm shadow-sm transition-all hover:shadow-md'
 	>
 		<span class='relative flex items-center justify-center'>
@@ -308,6 +311,6 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 			<span class='relative inline-flex h-2 w-2 rounded-full bg-green-400'></span>
 		</span>
 
-		<p class='font-medium'>Get free template</p>
+		<p class='font-medium'>Schedule a call</p>
 	</a>
 </PageLayout>
