--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -32,12 +32,14 @@ if (imagePath) {
 >
 	{
 		imagePath && (
-			<Image
-				src={images[imagePath]()}
-				alt={altText}
-				class={cn('mb-3 md:absolute md:mb-0', imageClass)}
-				loading='eager'
-			/>
+			<a href={href} aria-label={href}>
+				<Image
+					src={images[imagePath]()}
+					alt={altText}
+					class={cn('mb-3 md:absolute md:mb-0', imageClass)}
+					loading='eager'
+				/>
+			</a>
 		)
 	}
 	<div class='flex flex-col gap-y-1.5'>
