Add About section and side projects

--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -21,14 +21,14 @@ import astro from '../../assets/about-umesh.png'
 			<a
 				href='/blog'
 				class='flex-none text-[1.05rem] font-medium hover:text-foreground/75'
-				aria-label='Nav Menu Item'
+				aria-label='Blog'
 				>Blog
 			</a>
 			<a
-				href='/tools'
+				href='/side-projects'
 				class='flex-none text-[1.05rem] font-medium hover:text-foreground/75'
-				aria-label='Nav Menu Item'
-				>Tools
+				aria-label='Side Projects'
+				>Side Projects
 			</a>
 
 			<button
