--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,8 +30,8 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 			<div class='flex flex-col items-center gap-y-4'>
 				<h1 class='text-4xl font-black'>hi, I'm Umesh</h1>
 				<h2 class='text-center text-xl'>
-					Software Engineer turned Entrepreneur. I love building things and helping people.<br /> Very
-					active on Xwitter.
+					Software Engineer turned Entrepreneur. I love building tech products and helping people.<br
+					/> Very active on X/twitter.
 				</h2>
 				<a
 					href='https://calendly.com/umesh-ganapathy/30min'
@@ -101,36 +101,36 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 				and Engineering, which I completed in 2007.
 			</p>
 			<p class='text-muted-foreground'>
-				From my childhood days, I developed a keen interest to be a generalist and build businesses
-				that make a difference and embarked on multiple side hustles. After graduating, I stumbled
-				upon my first job offer at an Ed Tech startup called HeyMath! in Chennai as Software
-				Engineer. It was there that I realised the gap between being college smart and possessing
-				the actual skills required as a software developer in the business world to make production
-				ready code. After gaining sufficient knowledge in the early years of my career, I started
-				volunteering as the Campus Connect Chair for a couple of non-profits, educating students
-				across colleges in South India. Along with my team, we organised various campus programs,
-				events, workshops, and hackathons to bridge the skill gaps between the curriculum and
-				real-world tech stacks. Additionally, I was part of managing team for two technology user
-				groups in Chennai: the Adobe Flex User Group and the HTML User Group, where we organised
-				events, sessions, hackathons, and provided training to the developer community on the latest
-				technology trends.
+				From my childhood days, I developed a keen interest in being a generalist and building
+				businesses that make a difference, and I embarked on multiple side hustles. After
+				graduating, I stumbled upon my first job offer at an Ed Tech startup called HeyMath! in
+				Chennai as a Software Engineer. It was there that I realized the gap between being college
+				smart and possessing the actual skills required as a software developer in the business
+				world to make production-ready code. After gaining sufficient knowledge in the early years
+				of my career, I started volunteering as the Campus Connect Chair for a couple of
+				non-profits, educating students across colleges in South India. Along with my team, we
+				organized various campus programs, events, workshops, and hackathons to bridge the skill
+				gaps between the curriculum and real-world tech stacks. Additionally, I was part of the
+				managing team for two technology user groups in Chennai: the Adobe Flex User Group and the
+				HTML User Group, where we organized events, sessions, hackathons, and provided training to
+				the developer community on the latest technology trends.
 			</p>
 			<p class='text-muted-foreground'>
 				In 2012, I joined Report Bee, an Education Data Analytics company, as a founding team
-				member. As the Product Chief of Technology, I worked closely with the founders and CTO to
-				build the tech team and develop the product from the ground up. In 2018, XSEED Education
-				acquired Report Bee. Time with Report Bee allowed me to understand education landscape
-				across the world and collaborate with various experts from governments and publishers such
-				as Pearson and Oxford.
+				member. As the Head of Engineering, I worked closely with the founders and CTO to build the
+				tech team and develop the product from the ground up. In 2018, XSEED Education acquired
+				Report Bee. My time with Report Bee allowed me to understand the education landscape across
+				the world and collaborate with various experts from governments and publishers such as
+				Pearson and Oxford along with building world class robust tech products and teams.
 			</p>
 			<p class='text-muted-foreground'>
-				In 2019, I decided to take a break from formal work to bond with my family. During next 3
-				years we visited 7 countries, relocated to US for my wife’s research and became dad of two
-				amazing boys. Along with all these, I found Collabwrite a consulting agency, through which I
-				explored my passion to build and solve growth problems. Collabwrite provided me with
-				opportunities to work with several founders and leaders and their challenges in building
-				MVPs, product launches, product growth. This allowed me to expand my expertise beyond
-				programming, technology, and ed tech.
+				In 2019, I decided to take a break from formal work to bond with my family. During the next
+				3 years, we visited 7 countries, relocated to the US for my wife's research, and I became
+				the dad of two amazing boys. Along with all these, I founded Collabwrite, a consulting
+				agency, through which I explored my passion to build and solve growth problems. Collabwrite
+				provided me with opportunities to work with several founders and leaders on their challenges
+				in building MVPs, product launches, and product growth. This allowed me to expand my
+				expertise beyond programming, technology, and ed tech.
 			</p>
 		</Section>
 		{
@@ -155,6 +155,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 				imagePath='/src/assets/collabwrite.png'
 				altText='Umesh Ganapathy, Founder and CEO, Collabwrite'
 				imageClass='h-9 w-auto md:-left-28'
+				href='https://www.collabwrite.com'
 			>
 				Collabwrite is a Consulting firm helps businesses develop, integrate, and maximize the value
 				of AI and IT.
@@ -287,7 +288,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 				imagePath='/src/assets/riarui.jpeg'
 				altText='Campus Connect Chair, Society for Rich Internet Applications and Rich User Interface'
 				imageClass='h-14 w-auto md:-left-16'
-				href='https://www.google.com'
+				href='https://www.linkedin.com/company/society-for-rich-internet-application-&-rich-user-interface/'
 				>Lead campus connect program for RIA-RUI Society for upskilling college graduates and
 				freshers. Coordinated with Adobe, Google, Microsoft and Samsung evangelism teams for their
 				student outreach programs in conducting various activities like hackathons, hands on
@@ -299,7 +300,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 				imagePath='/src/assets/html5.png'
 				altText='Founder & Manager, HTML5 User Group Chennai'
 				imageClass='h-11 w-auto md:-left-32'
-				href='https://www.google.com'
+				href='https://www.facebook.com/groups/html5ug'
 				>Founded and managed a volunteer driven community of frontend web developers to exchange
 				knowledge, network, get support and develop skills.</Card
 			>
