More clean up of website

--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -19,16 +19,22 @@ import astro from '../../assets/about-umesh.png'
 
 		<div class='flex flex-row items-center justify-center gap-x-5 sm:gap-x-7'>
 			<a
+				href='/about'
+				class='flex-none text-[1.05rem] font-medium hover:text-foreground/75'
+				aria-label='about'
+				>About
+			</a>
+			<a
 				href='/blog'
 				class='flex-none text-[1.05rem] font-medium hover:text-foreground/75'
 				aria-label='Blog'
 				>Blog
 			</a>
 			<a
-				href='/side-projects'
+				href='/sidelines'
 				class='flex-none text-[1.05rem] font-medium hover:text-foreground/75'
-				aria-label='Side Projects'
-				>Side Projects
+				aria-label='Sidelines'
+				>Sidelines
 			</a>
 
 			<button
