--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -2,20 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
-	font-family: 'Satoshi';
-	src: url('/fonts/Satoshi-Variable.ttf');
-	font-style: normal;
-	font-display: swap;
+* {
+	font-family: Tahoma, sans-serif;
+	font-size: large;
 }
-
-@font-face {
-	font-family: 'Satoshi';
-	src: url('/fonts/Satoshi-VariableItalic.ttf');
-	font-style: italic;
-	font-display: swap;
-}
-
 @layer base {
 	:root {
 		--background: 210 33% 99%;
