--- a/src/components/ToolSection.astro
+++ b/src/components/ToolSection.astro
@@ -37,7 +37,9 @@ const { class: className, title, tools, ...props } = Astro.props
 						<div class='absolute -inset-0 z-10 rounded-lg border border-border bg-muted opacity-0 transition-all group-hover:opacity-50' />
 						<Icon name={tool.iconPath} class='z-20 h-10 w-10 rounded-lg bg-muted p-2' />
 						<div class='z-20 flex flex-col'>
-							<h3 class='font-medium'>{tool.name}</h3>
+							<h3 class='font-medium'>
+								{tool.name}
+							</h3>
 							<p class='text-muted-foreground'>{tool.description}</p>
 						</div>
 					</div>
