--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -31,10 +31,10 @@ import astro from '../../assets/about-umesh.png'
 				>Blog
 			</a>
 			<a
-				href='/sidelines'
+				href='/projects/'
 				class='flex-none text-[1.05rem] font-medium hover:text-foreground/75'
-				aria-label='Sidelines'
-				>Sidelines
+				aria-label='Projects'
+				>Projects
 			</a>
 
 			<button
