--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -32,6 +32,13 @@ const WEBSITES = {
 	],
 	TECHNOLOGY: [
 		{
+			name: 'LinkedGrow.in',
+			description: 'AI-powered sidekick tool for LinkedIn Growth.',
+			href: 'https://linkedgrow.in/',
+			iconPath: 'linkedgrow',
+			iconBgColour: '#9c27b0'
+		},
+		{
 			name: 'DomainAI',
 			description: 'AI-powered domain manager.',
 			href: 'https://domainai.app/',
