Clean up blog sections. Linked to linkedin articles

--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -4,7 +4,7 @@ import { cn } from '@/utils'
 const { class: className, title } = Astro.props
 ---
 
-<section class={cn(className, 'flex flex-col gap-y-5 md:flex-row md:gap-y-0')}>
+<section class={cn(className, 'flex flex-col gap-y-5 md:gap-y-0 mt-10')}>
 	<div class='text-xl font-semibold md:w-1/3'>
 		<h2>{title}</h2>
 	</div>
