--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -100,7 +100,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 						</svg>
 					</Label>
 				</div>
-				<div class="w-40">
+				<div class='w-40'>
 					<a
 						href='https://calendly.com/umesh-ganapathy/30min'
 						class='flex flex-row items-center gap-x-3 rounded-3xl border border-input px-4 py-2 text-sm shadow-sm transition-all hover:shadow-md'
@@ -128,6 +128,14 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 						</Section>
 					)
 				}
+
+				<Section title='LinkedIn Articles'>
+					<a
+						href='https://www.linkedin.com/in/umeshganapathy/recent-activity/articles/'
+					>
+						Go to LinkedIn
+					</a>
+				</Section>
 			</div>
 		</section>
 	</div>
