--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -117,7 +117,7 @@ const paginationProps = {
 		}
 
 		<a
-			href='https://github.com/srleom/astro-theme-resume.git'
+			href='https://www.linkedin.com/in/umeshganapathy/recent-activity/articles/'
 			class='mt-16 inline-flex flex-row items-center gap-x-3 rounded-3xl border border-input px-4 py-2 text-sm shadow-sm transition-all hover:shadow-md'
 		>
 			<span class='relative flex items-center justify-center'>
@@ -127,7 +127,7 @@ const paginationProps = {
 				<span class='relative inline-flex h-2 w-2 rounded-full bg-green-400'></span>
 			</span>
 
-			<p class='font-medium'>Get free template</p>
+			<p class='font-medium'>Read my articles on LinkedIn</p>
 		</a>
 	</div>
 </PageLayout>
